# self-healing-agent

./: .gitignore  ARCHITECTURE.md  README.md  agent.py  main.py  pyproject.toml  requirements.txt  todo_extraction.py
.github/workflows/: lint.yml
playwright/utils/doclint/linting-code-snippets/python/: main.py
src/: __init__.py
src/agents/: __init__.py  base.py  coding_agent.py  planning_agent.py  support_models.py  web_agent.py
src/lib/: __init__.py  coding_agent_runner.py  web_agent_runner.py
src/prompts/: claude_agent.yaml  coding_agent.yaml  plan_agent.yaml  web_agent.yaml
src/tools/: files.py
src/types/: __init__.py  models.py
src/utils/: __init__.py  conversation_extractor.py  conversation_formatter.py  cypress_executor.py  file_loader.py  json_fommatter.py  mcp_loader.py  playwright_extractor.py  prompt_loader.py  subprocess_executor.py
