[project]
name = "ai-automation-using-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk==0.1.5",
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "langchain>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "mcp>=1.18.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
]
